--- a/app.json
+++ b/app.json
@@ -1,12 +1,18 @@
 {
   "pages": [
     "pages/my/my",
+    "pages/my/platformrules/platformrules",
+    "pages/my/platformrules/userprotocol/userprotocol",
     "pages/my/security/security",
     "pages/my/security/clickalarm/clickalarm",
     "pages/my/consultation/consultation",
     "pages/my/consultation/seek/seek",
     "pages/my/setup/setup",
     "pages/my/mywallet/mywallet",
+    "pages/my/mywallet/mycash/mycash",
+    "pages/my/mywallet/mycash/investmoney/investmoney",
+    "pages/my/mywallet/mycash/cashdetails/cashdetails",
+    "pages/my/mywallet/mycash/cashdetails/detailsnei/detailsnei",
     "pages/my/myorder/myorder",
     "pages/my/ringing/ringing",
     "pages/my/changing_over/changing_over",
