--- a/app.json
+++ b/app.json
@@ -15,9 +15,11 @@
     "pages/my/consultation/seek/seek",
     "pages/my/setup/setup",
     "pages/my/mywallet/mywallet",
+    "pages/my/mywallet/coupon/coupon",
     "pages/my/mywallet/mypoints/mypoints",
     "pages/my/mywallet/mycash/mycash",
     "pages/my/mywallet/mycash/investmoney/investmoney",
+    "pages/my/mywallet/mycash/withdrawal/withdrawal",
     "pages/my/mywallet/mycash/cashdetails/cashdetails",
     "pages/my/mywallet/mycash/cashdetails/detailsnei/detailsnei",
     "pages/my/myorder/myorder",
