--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.7.1",
-	"appid": "wx083e4a00e92a4ee4",
+	"appid": "wxb63ab9d8eb0288a4",
 	"projectname": "%E6%90%AC%E5%AE%B6",
 	"debugOptions": {
 		"hidedInDevtools": []
